# sage

./: #Relevant functions and how to use them.py  .codecov.yml  .gitattributes  .gitignore  .gitpod-setup-trac-remote.sh  .gitpod.yml  .homebrew-build-env  .taplo.toml  .zenodo.json  CITATION.cff  CITATION.cff.in  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_COMMITTEE.md  CONTRIBUTING.md  COPYING.txt  GT_Calc_Window.py  HANDLING_VIOLATIONS.md  Makefile  Pipfile  README.md  VERSION.txt  asv.conf.json  bootstrap  bootstrap-conda  condarc.yml  conf37222  conf37398  conf37442  config.cache  configure.ac  configure_wrapper  conftest.py  constraints_pkgs.txt  environment-3.10-linux-aarch.yml  environment-3.10-linux-aarch64.yml  environment-3.10-linux.yml  environment-3.10-macos-arm.yml  environment-3.10-macos-arm64.yml  environment-3.10-macos-x86_64.yml  environment-3.10-macos.yml  (+56 more)
src/: .relint.yml  MANIFEST.in  Pipfile.m4  VERSION.txt  build-docs.py  conftest.py  conftest_test.py  environment-3.10-linux-aarch.yml  environment-3.10-linux-aarch64.yml  environment-3.10-linux.yml  environment-3.10-macos-arm.yml  environment-3.10-macos-arm64.yml  environment-3.10-macos-x86_64.yml  environment-3.10-macos.yml  environment-3.11-linux-aarch.yml  environment-3.11-linux-aarch64.yml  environment-3.11-linux.yml  environment-3.11-macos-arm.yml  environment-3.11-macos-arm64.yml  environment-3.11-macos-x86_64.yml  environment-3.11-macos.yml  environment-3.9-linux-aarch.yml  environment-3.9-linux-aarch64.yml  environment-3.9-linux.yml  environment-3.9-macos-arm.yml  environment-3.9-macos-arm64.yml  environment-3.9-macos-x86_64.yml  environment-3.9-macos.yml  environment-dev-3.10-linux-aarch.yml  environment-dev-3.10-linux-aarch64.yml  environment-dev-3.10-linux.yml  environment-dev-3.10-macos-arm.yml  environment-dev-3.10-macos-arm64.yml  environment-dev-3.10-macos-x86_64.yml  environment-dev-3.10-macos.yml  environment-dev-3.11-linux-aarch.yml  environment-dev-3.11-linux-aarch64.yml  environment-dev-3.11-linux.yml  environment-dev-3.11-macos-arm.yml  environment-dev-3.11-macos-arm64.yml  (+20 more)
src/autogen/: __init__.py
src/autogen/flint/: README.md  env.py  writer.py
src/doc/: Makefile  bootstrap  bootstrap.py  make.sh  meson.build  versions.txt
src/doc/ca/: meson.build
src/doc/common/: meson.build  python3.inv  update-inventories.sh  update-python-inv.sh  update-vendored-inventories.sh
src/doc/de/: meson.build
src/doc/en/: conf.py  index.rst  meson.build
src/doc/es/: meson.build
src/doc/hu/: meson.build
src/doc/it/: meson.build
src/doc/ru/: meson.build
src/doc/zh/: meson.build
src/sage/: __init__.py  all.py  all__sagemath_bliss.py  all__sagemath_brial.py  all__sagemath_categories.py  all__sagemath_combinat.py  all__sagemath_eclib.py  all__sagemath_environment.py  all__sagemath_flint.py  all__sagemath_gap.py  all__sagemath_giac.py  all__sagemath_graphs.py  all__sagemath_groups.py  all__sagemath_libbraiding.py  all__sagemath_meataxe.py  all__sagemath_modules.py  all__sagemath_ntl.py  all__sagemath_objects.py  all__sagemath_pari.py  all__sagemath_plot.py  all__sagemath_polyhedra.py  all__sagemath_repl.py  all__sagemath_schemes.py  all__sagemath_singular.py  all__sagemath_symbolics.py  all_cmdline.py  all_test.py  config.py.in  config_test.py  env.py  meson.build  meson.build.in  version.py
src/sage/algebras/: affine_nil_temperley_lieb.py  algebra.py  all.py  all__sagemath_combinat.py  all__sagemath_modules.py  askey_wilson.py  associated_graded.py  catalog.py  cellular_basis.py  clifford_algebra.py  clifford_algebra_element.pxd  clifford_algebra_element.pyi  clifford_algebra_element.pyx  cluster_algebra.py  combinatorial_theory.py  commutative_dga.py  down_up_algebra.py  exterior_algebra_groebner.pxd  exterior_algebra_groebner.pyi  exterior_algebra_groebner.pyx  finite_gca.py  flag.pyx  flag_algebras.py  flag_theories_catalog.py  free_algebra.py  free_algebra_element.py  free_algebra_quotient.py  free_algebra_quotient_element.py  free_zinbiel_algebra.py  group_algebra.py  hall_algebra.py  iwahori_hecke_algebra.py  jordan_algebra.py  meson.build  nil_coxeter_algebra.py  octonion_algebra.pxd  octonion_algebra.pyx  orlik_solomon.py  orlik_terao.py  q_commuting_polynomials.py  (+16 more)
src/sage/arith/: all.py  all__sagemath_objects.py  constants.pxd  functions.pxd  functions.pyi  functions.pyx  long.pxd  meson.build  misc.py  multi_modular.pxd  multi_modular.pyx  numerical_approx.pxd  numerical_approx.pyx  power.pxd  power.pyx  rational_reconstruction.pxd  rational_reconstruction.pyi  rational_reconstruction.pyx  srange.pyx
src/sage/benchmark/: __init__.py  docstring.py
src/sage/calculus/: all.py  all__sagemath_categories.py  all__sagemath_modules.py  all__sagemath_standard_no_symbolics.py  calculus.py  desolvers.py  expr.py  functional.py  functions.py  integration.pyx  interpolation.pxd  interpolation.pyx  interpolators.pyx  meson.build  ode.pxd  ode.pyx  predefined.py  riemann.pyx  test_sympy.py  tests.py  var.pyx  wester.py
src/sage/categories/: __init__.py  action.pxd  action.pyx  additive_groups.py  additive_magmas.py  additive_monoids.py  additive_semigroups.py  affine_weyl_groups.py  algebra_functor.py  algebra_ideals.py  algebra_modules.py  algebras.py  algebras_with_basis.py  all.py  all__sagemath_objects.py  anderson_motives.py  aperiodic_semigroups.py  associative_algebras.py  axiom.py  basic.py  bialgebras.py  bialgebras_with_basis.py  bimodules.py  cartesian_product.py  category.py  category_cy_helper.pxd  category_cy_helper.pyx  category_singleton.pxd  category_singleton.pyx  category_types.py  category_with_axiom.py  chain_complexes.py  classical_crystals.py  coalgebras.py  coalgebras_with_basis.py  coercion_methods.pyx  commutative_additive_groups.py  (+182 more)
src/sage_docbuild/: __main__.py  build_options.py  builders.py  conf.py  config.py.in  mathjax_config.py.in  meson.build  sphinxbuild.py  utils.py  vendor.py
src/sage_setup/: __init__.py  clean.py  cython_options.py  excepthook.py  find.py  library_order.py  run_parallel.py  setenv.py  util.py
subprojects/flint/: meson.build
(+5768 files in other folders)
