## Options for the Meson build system
# https://mesonbuild.com/Build-options.html

option(
  'SAGE_LOCAL',
  type: 'string',
  value: '',
  description: 'Path to SAGE_LOCAL directory (only used for compatibility with the old Sage-the-Distro',
)

#
# Boolean options
#
option(
  'build-docs',
  type: 'boolean',
  description: 'Build the HTML / PDF documentation'
)
