[build-system]
build-backend = 'mesonpy'
# Minimum requirements for the build system to execute.
requires = [
    'meson-python',
    'cypari2 >=2.1.1',
    # Exclude 1.12.0 because of https://github.com/sagemath/cysignals/issues/212
    'cysignals >=1.11.2, != 1.12.0',
    # Exclude 3.0.3 because of https://github.com/cython/cython/issues/5748
    'cython >=3.0, != 3.0.3',
    'gmpy2 ~=2.1.b999',
    'memory_allocator',
    'numpy >=1.25',
    'jinja2'
]
[project]
name = "sagemath"
description = "Sage: Open Source Mathematics Software: Standard Python Library"
dependencies = [
    'six >=1.15.0',
    'conway-polynomials >=0.8',
    'cypari2 >=2.1.1',
    # Exclude 1.12.0 because of https://github.com/sagemath/cysignals/issues/212
    'cysignals >=1.11.2, != 1.12.0',
    'cython >=3.0, != 3.0.3',
    'gmpy2 ~=2.1.b999',
    'lrcalc ~=2.1',
    'memory_allocator',
    'numpy >=1.25',
    # Issue #30922: pplpy 0.8.4 and earlier do not declare dependencies correctly
    'pplpy >=0.8.6',
    'primecountpy',
    'requests >=2.13.0',
    # According to https://github.com/python/typing_extensions/blob/main/CHANGELOG.md,
    # version 4.4.0 adds another Python 3.11 typing backport
    'typing_extensions >= 4.4.0; python_version<"3.11"',
    'ipython >=8.9.0',
    'pexpect >=4.8.0',
    'sphinx >=5.2, <9',
    'networkx >=3.1',
    'scipy >=1.11',
    'sympy >=1.6, <2.0',
    'matplotlib >=3.7.0',
    'pillow >=7.2.0',
    'mpmath >=1.1.0',
    'ipykernel >=5.2.1',
    'jupyter-client',
    'ipywidgets >=7.5.1',
    'fpylll >=0.5.9',
    'ptyprocess > 0.5',
    # TODO: Remove this once the migration to meson is complete
    'pkgconfig'
]
dynamic = ["version"]
license = {text = "GNU General Public License (GPL) v2 or later"}
authors = [{name = "The Sage Developers", email = "sage-support@googlegroups.com"}]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {Homepage = "https://www.sagemath.org"}
requires-python = ">=3.9, <3.14"

[project.optional-dependencies]
R = [
    'rpy2 >=3.3',
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
sage = "sage.cli:main"

[tool.conda-lock]
platforms = [
    'osx-64', 'linux-64', 'linux-aarch64', 'osx-arm64'
]

[tool.pytest.ini_options]
python_files = "*_test.py"
norecursedirs = "local prefix venv build builddir pkgs .git src/doc src/bin src/sage_setup/autogen/flint tools"
# The "no:warnings" is to stop pytest from capturing warnings so that they are printed to the output of the doctest
addopts = "--import-mode importlib -p no:warnings"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
# https://docs.pytest.org/en/stable/reference/reference.html#confval-consider_namespace_packages
consider_namespace_packages = true

# External dependencies in the format proposed by https://peps.python.org/pep-0725
[external]
build-requires = [
  "virtual:compiler/c",
  "virtual:compiler/cpp",
  "pkg:generic/pkg-config"
]

host-requires = [
  "virtual:interface/blas",
  "virtual:compiler/fortran",
  "pkg:generic/boost",
  "pkg:generic/brial",
  "pkg:generic/cddlib",
  "pkg:generic/cliquer",
  "pkg:generic/ecl",
  "pkg:generic/eclib",
  "pkg:generic/ecm",
  "pkg:generic/fflas-ffpack",
  "pkg:generic/fplll",
  "pkg:generic/flint",
  "pkg:generic/libgd",
  "pkg:generic/gap",
  "pkg:generic/gfan",
  "pkg:generic/giac",
  "pkg:generic/givaro",
  "pkg:generic/glpk",
  "pkg:generic/gmp",
  "pkg:generic/gsl",
  "pkg:generic/iml",
  "pkg:generic/lcalc",
  "pkg:generic/libbraiding",
  "pkg:generic/libhomfly",
  "pkg:generic/linbox",
  "pkg:generic/lrcalc",
  "pkg:generic/m4ri",
  "pkg:generic/m4rie",
  "pkg:generic/maxima",
  "pkg:generic/mpc",
  "pkg:generic/mpfi",
  "pkg:generic/mpfr",
  "pkg:generic/nauty",
  "pkg:generic/ntl",
  "pkg:generic/palp",
  "pkg:generic/pari",
  "pkg:generic/pari-elldata",
  "pkg:generic/pari-galdata",
  "pkg:generic/pari-seadata",
  "pkg:generic/planarity",
  "pkg:generic/ppl",
  "pkg:generic/primesieve",
  "pkg:generic/primecount",
  "pkg:generic/qhull",
  "pkg:generic/rw",
  "pkg:generic/singular",
  "pkg:generic/symmetrica",
  "pkg:generic/sympow",
]

dependencies = [
  "pkg:generic/tachyon",
  "pkg:generic/sagemath-polytopes-db",
  "pkg:generic/sagemath-elliptic-curves",
  "pkg:generic/sagemath-graphs",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-xdist",
  "coverage",
]
docs = [
  "sphinx", 
  "sphinx-inline-tabs", 
  "furo",
]
lint = [
  "relint",
  "ruff",
  "pycodestyle",
  "flake8-rst-docstrings",
]
